✨feat|prefer the IDE's test runner for the scoped run in igiari-tdd
The author's idea, and the largest saving left in this skill because it
applies per cycle rather than once. A bounded build run still costs ~20-30
lines of banner, reactor summary and timing; an IDE runner returns a
structured result for a fraction of that. Roughly 5-10x per cycle,
multiplied by cycle count, recurring on every task.

Written in as unverified, the same status as mujitsu-documentum, gated on
two one-time checks per project: whether the IDE MCP server exposes a test
runner at all, and — the one that matters — whether its runner agrees with
the build. An IDE run may not apply surefire's argLine, system properties
or active profiles, and if it passes where mvn fails then every red and
green in the cycle is unreliable. Correctness of the red is not negotiable
for a token saving: where they diverge, the build tool wins.

Replaces the scoped run only. The terminal full build and
chottomatte-archi's post-structural-change build stay build-tool jobs, and
the bounded commands remain the fallback for CI and fresh machines.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013rMMmRfp8TCpUkq3BSLu6G